# markdown-translator

./: .gitignore  README.md  config.yaml  crawler_classes.py  debug_md.md  extracted_pdf_data_log.md  gateways.py  journals.py  main.py  main_from_html.py  memo_html_scraping.md  models.py  my_file.html  output.md  pyproject.toml  requirements.txt  sample.html  sample.py  sample_markdown.md  sample_markdown_trans.md  sample_paper_summary.md  section_content_class.py  translate.sh  translators.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
markdown_translator/: md_translator.py
pdf_to_md_converter/: main.py  requirements.txt
pdf_to_md_converter/app/api/: main.py  pdf_summary.py
pdf_to_md_converter/app/services/: pdf_extraction.py
src/: main.py  pdf_to_markdonw_main.py
src/entities/: markdown_content_base.py  markdown_content_class.py  pdf_content_base.py
src/external_systems/: pdf_to_markdown_controller.py
src/markdown_reader/: markdown_content_base.py  md_input_output.py  pdf_content_base.py
src/markdown_translator/: main.py  md_translator.py  query_parser.py  sentence_splitter.py
src/markdown_translator/app/: __main__.py  llm_paper_translator_facade.py  schema.py
src/markdown_translator/entities/: pdf_content_base.py
src/markdown_translator/markdown_reader/: md_input_output.py
src/markdown_translator/markdown_translator/: md_translator.py  query_parser.py
src/services/: pdf_content_extracter.py  pdf_to_markdown_converter.py
src/use_cases/: pdf_content_extracter.py  pdf_to_markdown_converter.py
target_html/: chuhan_et_al_2022.md  ciacci_et_al_2020.md  ciacci_et_al_2020_trans.md  francesca_2020.html  francesca_2020.qmd  math_test.md  math_test_trans.html  muller_2005.html  muller_2005.md  okura_et_al_2017.md  ozgobek_et_al_2019.html  ozgobek_et_al_2019.md  stylianou_et_al_2021.md  stylianou_et_al_2021_trans.md  tajima_et_al.md  zheng_et_al_2022.md  zheng_et_al_2022_trans.html  zheng_et_al_2022_trans.md
templates/: base.html  paper.html
test/: test_md_translator.py
test/pdf_to_md_converter/: test_paper_md.md  test_pdf_to_markdown_converter.py
test/unit_test/: test_query_parser.py  test_sentence_splitter.py
tests/pdf_to_md_converter/: test_paper_pdf.md  test_pdf_to_markdown_converter.py
tests/service/: test_web_page_parser.py
utils/: generic_utils.py  outfmt_utils.py  soup_utils.py
(+14 files in other folders)
