[tool.poetry]
name = "markdown-translator"
version = "0.1.0"
description = ""
authors = ["morita <morinota416@gmail.com>"]
readme = "README.md"
packages = [{include = "markdown_translator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pdfminer = "^20191125"
selenium = "^4.25.0"
typer = "^0.12.5"
pydantic = "^2.9.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pymupdf4llm = "^0.0.17"
langchain = "^0.3.8"
langchain-openai = "^0.2.9"
langchain-community = "^0.3.8"
omegaconf = "^2.3.0"
duckdb = "^1.1.3"
loguru = "^0.7.2"
e2b = "^1.0.4"
playwright = "^1.49.0"
markdownify = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"

[tool.pytest.ini_options]
testpaths = ["tests"]

# liting and formatting
[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
